--- a/package.json
+++ b/package.json
@@ -14,4 +14,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-    "p
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.2"
+  }
+}
